fix: header size too big

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,9 @@ body {
   width: 100vw;
 }
 
+/* * Wrapper of the main section */
 main {
-  margin: 30px 0px 0px 0px;
+  margin: 0;
   display: flex;
   flex: 1;
   justify-content: center;
@@ -46,7 +47,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
-  padding: 0 2rem 2rem 2rem;
+  padding: 1rem 2rem 2rem 2rem;
   overflow-y: auto;
 }
 main::-webkit-scrollbar {
@@ -59,13 +60,14 @@ main::-webkit-scrollbar-thumb {
   border-radius: 2px;
 }
 
+/* * Header */
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   width: 100vw;
-  padding: 2rem 5rem;
+  padding: 1rem 5rem 0 5rem;
 }
 header section {
   max-width: 900px;
@@ -94,4 +96,22 @@ header button#changeQuote {
 }
 header button:hover {
   transform: translateY(-2px);
+}
+@media(max-width: 500px) {
+  header {
+    padding: 0.5rem 0.5rem 0 0.5rem;
+  }
+  header h1 {
+    font-size: 1rem;
+  }
+  header button#changeQuote {
+    padding: 0;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    transition: 0.2s;
+    border: 2px solid transparent;
+    text-align: left;
+  }
 }
